[Aalekh] ADD: Get order by id api with swagger implementation and rspec testing
