# app/controllers/api/v1/orders_controller.rb
@@ -29,6 +29,20 @@ class Api::V1::OrdersController < ApplicationController
     end
   end
 
+  def show
+    token = request.headers["Authorization"]&.split(" ")&.last
+    result = OrderService.get_order_by_id(token, params[:id])
+    if result[:success]
+      render json: { order: result[:order] }, status: :ok
+    elsif result[:error] == "Invalid token"
+      render json: { error: result[:error] }, status: :unauthorized
+    elsif result[:error] == "User not found" || result[:error] == "Order not found"
+      render json: { error: result[:error] }, status: :not_found
+    else
+      render json: { errors: result[:error] }, status: :unprocessable_entity
+    end
+  end
+
   def order_params
     params.require(:order).permit(:book_id, :address_id, :quantity)
   end
